--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
     <div class="right">
       <div class="camera">
-        <iframe src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=twoja-domena.vercel.app" allowfullscreen></iframe>
+        <iframe src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=ogranik-watch-party.vercel.app" allowfullscreen></iframe>
       </div>
       <div class="chat">
-        <iframe src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=twoja-domena.vercel.app"></iframe>
+        <iframe src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=ogranik-watch-party.vercel.app"></iframe>
       </div>
     </div>
   </div>
