--- a/index.html
+++ b/index.html
@@ -5,43 +5,121 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>shyguy_LIVE</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      background: black;
-      color: white;
       font-family: sans-serif;
+      background-color: black;
+      color: white;
+      height: 100vh;
+      overflow: hidden;
       display: flex;
+    }
+
+    .main {
+      display: flex;
+      width: 100%;
       height: 100vh;
     }
-    .main { display: flex; flex: 1; }
-    .left, .right { padding: 10px; }
-    .left { flex: 3; display: flex; flex-direction: column; }
-    .right { flex: 1; background: #1a1a1a; display: flex; flex-direction: column; }
-    video { width: 100%; height: auto; background: #000; border-radius: 10px; }
-    .upload { margin-top: 10px; }
-    iframe { border: none; border-radius: 10px; }
-    .chat iframe { height: 50vh; }
-    .camera iframe { height: 30vh; }
+
+    .left {
+      flex: 3;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      background: black;
+    }
+
+    .right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      background-color: #1a1a1a;
+    }
+
+    .camera, .chat, .upload {
+      flex: 1;
+      margin-bottom: 10px;
+    }
+
+    .upload {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    iframe {
+      width: 100%;
+      border-radius: 10px;
+      border: none;
+      background: #000;
+    }
+
+    .chat iframe {
+      height: 60vh; /* Zwiększ wysokość czatu */
+    }
+
+    .camera iframe {
+  height: 30vh;
+}
+   
+    input[type="file"] {
+      background: white;
+      color: black;
+      padding: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <div class="main">
     <div class="left">
-      <video id="videoPlayer" controls></video>
-      <div class="upload">
-        <input type="file" id="fileInput" accept="video/*" />
-      </div>
+      <video id="videoPlayer" controls style="display: none;"></video>
     </div>
+
     <div class="right">
       <div class="camera">
-        <iframe src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=ogranik-watch-party.vercel.app" allowfullscreen></iframe>
+        <iframe
+          src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=shyguy-watch-party.vercel.app"
+          allowfullscreen>
+        </iframe>
       </div>
       <div class="chat">
-        <iframe src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=ogranik-watch-party.vercel.app"></iframe>
+        <iframe
+          src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=shyguy-watch-party.vercel.app">
+        </iframe>
+      </div>
+      <div class="upload">
+        <input type="file" accept="video/*" id="fileInput" />
       </div>
     </div>
   </div>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="script.js"></script>
+
+  <script>
+    const fileInput = document.getElementById('fileInput');
+    const videoPlayer = document.getElementById('videoPlayer');
+
+    fileInput.addEventListener('change', function () {
+      const file = this.files[0];
+      if (file) {
+        const url = URL.createObjectURL(file);
+        videoPlayer.src = url;
+        videoPlayer.style.display = 'block';
+      }
+    });
+  </script>
 </body>
 </html>
