--- a/index.html
+++ b/index.html
@@ -5,26 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>shyguy_LIVE</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
       font-family: sans-serif;
       background-color: black;
       color: white;
       height: 100vh;
-      overflow: hidden;
       display: flex;
+      overflow: hidden;
     }
-
     .main {
       display: flex;
       width: 100%;
-      height: 100vh;
+      height: 100%;
     }
-
     .left {
       flex: 3;
       padding: 20px;
@@ -32,14 +26,12 @@
       flex-direction: column;
       justify-content: center;
     }
-
     video {
       width: 100%;
       height: 100%;
       border-radius: 10px;
       background: black;
     }
-
     .right {
       flex: 1;
       display: flex;
@@ -47,33 +39,18 @@
       padding: 10px;
       background-color: #1a1a1a;
     }
-
     .camera, .chat, .upload {
       flex: 1;
       margin-bottom: 10px;
     }
-
-    .upload {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
     iframe {
       width: 100%;
       border-radius: 10px;
       border: none;
       background: #000;
     }
-
-    .chat iframe {
-      height: 60vh; /* Zwiększ wysokość czatu */
-    }
-
-    .camera iframe {
-  height: 30vh;
-}
-   
+    .chat iframe { height: 60vh; }
+    .camera iframe { height: 30vh; }
     input[type="file"] {
       background: white;
       color: black;
@@ -93,13 +70,13 @@
     <div class="right">
       <div class="camera">
         <iframe
-          src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=ogranik-watch-party.vercel.app"
+          src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=twoja-strona.vercel.app"
           allowfullscreen>
         </iframe>
       </div>
       <div class="chat">
         <iframe
-          src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=ogranik-watch-party.vercel.app">
+          src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=twoja-strona.vercel.app">
         </iframe>
       </div>
       <div class="upload">
@@ -108,7 +85,9 @@
     </div>
   </div>
 
+  <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
   <script>
+    const socket = io("https://twoj-socket-server.onrender.com"); // ← zamień na swój adres
     const fileInput = document.getElementById('fileInput');
     const videoPlayer = document.getElementById('videoPlayer');
 
@@ -119,6 +98,22 @@
         videoPlayer.src = url;
         videoPlayer.style.display = 'block';
       }
+    });
+
+    videoPlayer.addEventListener('play', () => {
+      socket.emit('play');
+    });
+
+    videoPlayer.addEventListener('pause', () => {
+      socket.emit('pause');
+    });
+
+    socket.on('play', () => {
+      if (videoPlayer.paused) videoPlayer.play();
+    });
+
+    socket.on('pause', () => {
+      if (!videoPlayer.paused) videoPlayer.pause();
     });
   </script>
 </body>
