--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     <div class="right">
       <div class="camera">
         <iframe
-          src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=twoja-strona.vercel.app"
+          src="https://player.twitch.tv/?channel=shyguy_LIVE&parent=ogranik-watch-party.vercel.app"
           allowfullscreen>
         </iframe>
       </div>
       <div class="chat">
         <iframe
-          src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=twoja-strona.vercel.app">
+          src="https://www.twitch.tv/embed/shyguy_LIVE/chat?parent=ogranik-watch-party.vercel.app">
         </iframe>
       </div>
       <div class="upload">
