--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </div>
   </div>
 
-  <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+  <script src="https://watch-party-server-jiqi.onrender.com"></script>
   <script>
-    const socket = io("https://twoj-socket-server.onrender.com"); // ← zamień na swój adres
+    const socket = io("https://watch-party-server-jiqi.onrender.com"); // ← zamień na swój adres
     const fileInput = document.getElementById('fileInput');
     const videoPlayer = document.getElementById('videoPlayer');
 
