--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     const fileInput = document.getElementById('fileInput');
     const videoPlayer = document.getElementById('videoPlayer');
 
+    // Obsługuje wybór pliku i wyświetla go wideo
     fileInput.addEventListener('change', function () {
       const file = this.files[0];
       if (file) {
@@ -100,20 +101,54 @@
       }
     });
 
+    // Wysyła informacje o rozpoczęciu odtwarzania
     videoPlayer.addEventListener('play', () => {
-      socket.emit('play');
+      socket.emit('play', videoPlayer.currentTime);
     });
 
+    // Wysyła informacje o pauzie
     videoPlayer.addEventListener('pause', () => {
       socket.emit('pause');
     });
 
-    socket.on('play', () => {
-      if (videoPlayer.paused) videoPlayer.play();
+    // Wysyła informacje o zatrzymaniu wideo
+    videoPlayer.addEventListener('ended', () => {
+      socket.emit('stop');
     });
 
+    // Synchronizuje czas odtwarzania (seek)
+    videoPlayer.addEventListener('seeked', () => {
+      socket.emit('seek', videoPlayer.currentTime); // Przesyła aktualny czas
+    });
+
+    // Odbiera i synchronizuje inne wydarzenia
+
+    // Play
+    socket.on('play', (time) => {
+      if (videoPlayer.paused) {
+        videoPlayer.play();
+        videoPlayer.currentTime = time; // Synchronizowanie czasu odtwarzania
+      }
+    });
+
+    // Pause
     socket.on('pause', () => {
-      if (!videoPlayer.paused) videoPlayer.pause();
+      if (!videoPlayer.paused) {
+        videoPlayer.pause();
+      }
+    });
+
+    // Stop
+    socket.on('stop', () => {
+      videoPlayer.pause();
+      videoPlayer.currentTime = 0; // Resetowanie czasu wideo
+    });
+
+    // Seek
+    socket.on('seek', (time) => {
+      if (Math.abs(videoPlayer.currentTime - time) > 1) { // Jeśli różnica czasu większa niż 1 sekunda
+        videoPlayer.currentTime = time; // Synchronizowanie czasu
+      }
     });
   </script>
 </body>
